Fix close icon has extra padding

--- a/packages/js-draw/src/toolbar/EdgeToolbar.scss
+++ b/packages/js-draw/src/toolbar/EdgeToolbar.scss
@@ -249,6 +249,7 @@
 
 			> .toolbar-button > .toolbar-icon {
 				margin-left: 10px;
+				margin-right: 0;
 			}
 
 			// Show last
@@ -267,6 +268,7 @@
 			> .toolbar-icon {
 				height: 100%;
 				margin-right: 10px;
+				margin-left: 0;
 			}
 		}
 	}
